--- a/member/css/add-task/add-task-layout-and-form.css
+++ b/member/css/add-task/add-task-layout-and-form.css
@@ -181,7 +181,7 @@ select {
   display: none;
   margin-top: 0px;
   margin-bottom: 12px;
-  font-size: 14px;
+  font-size: 16px;
   color: #ff3d00;
 }
 
