--- a/member/css/board/board-edit-and-animations.css
+++ b/member/css/board/board-edit-and-animations.css
@@ -152,7 +152,7 @@
 }
 
 .add-task__required-hint {
-  font-size: 14px;
+  font-size: 16px;
   color: var(--color-menu-bg);
 }
 
