--- a/member/css/summary/summary-main.css
+++ b/member/css/summary/summary-main.css
@@ -19,7 +19,7 @@
 
 .legal a {
   display: block;
-  font-size: 14px;
+  font-size: 16px;
   color: #abb0b3;
   cursor: pointer;
   width: calc(100% + 80px);
